--- a/test/upload.html
+++ b/test/upload.html
@@ -1,4 +1,4 @@
-<form enctype="multipart/form-data" action="http://localhost:8000/api/writeData/1" method="POST">
+<form enctype="multipart/form-data" action="http://192.168.0.102:8000/api/writeData/1" method="POST">
     <input type="hidden" name="MAX_FILE_SIZE" value="100000" />
     Choose a file to upload: <input name="sensor" type="file" /><br />
     <input type="submit" value="Upload File" />
